# Steam_Cleaner

./: .gitignore  CMakeLists.txt  README.md
include/: config.h  data.h  data_structs.h  sdl_helpers.h  steam_cleaner.h  ui.h
include/cimgui/: cimgui.h  cimgui_impl.h
src/: data.c  main.c  sdl_helpers.c  sdl_util.c  ui.c
